force-app/main/default/objects/Place__c/Place__c.object-meta.xml
<CustomObject>
    <label>Place</label>
    <nameField>
        <label>Place Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Places</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>