force-app/main/default/objects/Place__c/fields/Google_Place_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Place_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Google Place Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>