force-app/main/default/objects/Place__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IF(ISBLANK(Image_URL__c), &apos;No image available&apos;, IMAGE(Image_URL__c, Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>