force-app/main/default/objects/Place__c/fields/Opening_Hours__c.field-meta.xml
<CustomField>
    <fullName>Opening_Hours__c</fullName>
    <label>Opening Hours</label>
    <length>2048</length>
    <type>Html</type>
</CustomField>